--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-firecrawl-py==1.9.0
-phidata==2.7.10
-composio-phidata==0.6.15
-composio==0.1.1
-pydantic==2.10.5
-streamlit
-python-dotenv
-google-generativeai
-requests
+streamlit>=1.28.0
+requests>=2.31.0
+python-dotenv>=1.0.0
+phidata>=2.4.0
