--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-streamlit>=1.28.0
-requests>=2.31.0
-python-dotenv>=1.0.0
-phidata>=2.4.0
+# Core dependencies
+streamlit==1.53.0
+requests==2.32.5
+python-dotenv==1.2.1
+
+# AI/ML libraries
+phidata==2.7.10
+google-generativeai==0.8.3
+pydantic==2.12.5
+
+# Optional (if you add back scraping)
+beautifulsoup4==4.12.3
+lxml==5.1.0
