--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-# Core dependencies
-streamlit==1.53.0
-requests==2.32.5
-python-dotenv==1.2.1
-
-# AI/ML libraries
-phidata==2.7.10
-google-generativeai==0.8.3
-pydantic==2.12.5
-
-# Optional (if you add back scraping)
-beautifulsoup4==4.12.3
-lxml==5.1.0
+streamlit
+requests
+python-dotenv
+phidata
+google-generativeai
+beautifulsoup4
+pydantic
